# nfl-big-data-bowl-2026-prediction

./: .gitignore  COMPETITION_RULES.md  DATA_SCHEMA.md  DEPLOYMENT_AUTOMATION.md  KAGGLE_SUBMIT.md  Makefile  PREVENTION_TESTS.md  README.md  RULES_COMPLIANCE.md  SUBMISSION_CHECKLIST.md  TESTS_QUICK_REFERENCE.md  dataset-metadata.json  pyproject.toml  requirements.txt
.github/workflows/: publish_for_kaggle.yml  test.yml
features_only/: features.py
for_kaggle/: dataset-metadata.json  inference_only_submission.ipynb  submission_notebook.ipynb
for_kaggle/nfl_ensemble_v20251206_111755/: lgb_model_x.txt  lgb_model_y.txt  metadata.json  xgb_model_x.json  xgb_model_y.json
for_kaggle/scripts/: fix_model_for_kaggle.py  full_deployment.sh  prepare_for_kaggle.sh  run_local_server.py  train_model.py  upload_to_kaggle.py  verify_kaggle_runtime.py
notebooks/: eda.ipynb  inference_only_submission.ipynb  kernel-metadata.json  submission_notebook.ipynb  train_model.ipynb
scripts/: clean_and_deploy.sh  cleanup_old_datasets.py  deploy_ensemble.sh  full_deployment.sh  load_data.py  prepare_for_kaggle.sh  run_production_server.py  train_ensemble.py  train_model.py
tests/: README.md  test_deployment_safety.py  test_model_integrity.py  test_prevention_future_issues.py  test_submission_ready.py
